--- a/rt1052.uvprojx
+++ b/rt1052.uvprojx
@@ -395,6 +395,11 @@
               <FileType>1</FileType>
               <FilePath>.\User\src\main.c</FilePath>
             </File>
+            <File>
+              <FileName>task_app.c</FileName>
+              <FileType>1</FileType>
+              <FilePath>.\User\src\task_app.c</FilePath>
+            </File>
           </Files>
         </Group>
         <Group>
