添加led_appg工程文件,实现led灯的多样化控制

--- a/rt1052.uvprojx
+++ b/rt1052.uvprojx
@@ -415,6 +415,11 @@
               <FileType>1</FileType>
               <FilePath>.\User\src\battery_app.c</FilePath>
             </File>
+            <File>
+              <FileName>led_app.c</FileName>
+              <FileType>1</FileType>
+              <FilePath>.\User\src\led_app.c</FilePath>
+            </File>
           </Files>
         </Group>
         <Group>
@@ -459,6 +464,11 @@
               <FileName>battery_drv.c</FileName>
               <FileType>1</FileType>
               <FilePath>.\User\src\battery_drv.c</FilePath>
+            </File>
+            <File>
+              <FileName>led_drv.c</FileName>
+              <FileType>1</FileType>
+              <FilePath>.\User\src\led_drv.c</FilePath>
             </File>
           </Files>
         </Group>
