--- a/rt1052.uvprojx
+++ b/rt1052.uvprojx
@@ -498,6 +498,11 @@
               <FileType>1</FileType>
               <FilePath>.\board\pin_mux.c</FilePath>
             </File>
+            <File>
+              <FileName>pin_mux.h</FileName>
+              <FileType>5</FileType>
+              <FilePath>.\board\pin_mux.h</FilePath>
+            </File>
           </Files>
         </Group>
         <Group>
