移植正点原子的flash读写函数, 单包升级数据改为166byte

--- a/rt1052.uvprojx
+++ b/rt1052.uvprojx
@@ -714,6 +714,11 @@
                 </FileArmAds>
               </FileOption>
             </File>
+            <File>
+              <FileName>flexspi.c</FileName>
+              <FileType>1</FileType>
+              <FilePath>.\User\src\flexspi.c</FilePath>
+            </File>
           </Files>
         </Group>
         <Group>
@@ -1535,6 +1540,11 @@
                   </Cads>
                 </FileArmAds>
               </FileOption>
+            </File>
+            <File>
+              <FileName>flexspi.c</FileName>
+              <FileType>1</FileType>
+              <FilePath>.\User\src\flexspi.c</FilePath>
             </File>
           </Files>
         </Group>
