--- a/rt1052.uvprojx
+++ b/rt1052.uvprojx
@@ -616,6 +616,9 @@
           <GroupName>::CMSIS</GroupName>
         </Group>
         <Group>
+          <GroupName>::Compiler</GroupName>
+        </Group>
+        <Group>
           <GroupName>::Device</GroupName>
         </Group>
         <Group>
@@ -1298,6 +1301,9 @@
           <GroupName>::CMSIS</GroupName>
         </Group>
         <Group>
+          <GroupName>::Compiler</GroupName>
+        </Group>
+        <Group>
           <GroupName>::Device</GroupName>
         </Group>
         <Group>
@@ -1383,6 +1389,13 @@
       </component>
       <component Capiversion="2.1.3" Cclass="CMSIS" Cgroup="RTOS2" Csub="FreeRTOS" Cvendor="ARM" Cversion="10.2.0" condition="FreeRTOS RTOS2 CortexM">
         <package license="License/license.txt" name="CMSIS-FreeRTOS" schemaVersion="1.4" url="http://www.keil.com/pack/" vendor="ARM" version="10.2.0"/>
+        <targetInfos>
+          <targetInfo name="debug"/>
+          <targetInfo name="nor_sdram"/>
+        </targetInfos>
+      </component>
+      <component Cbundle="ARM Compiler" Cclass="Compiler" Cgroup="Event Recorder" Cvariant="DAP" Cvendor="Keil" Cversion="1.4.0" condition="Cortex-M Device">
+        <package name="ARM_Compiler" schemaVersion="1.4.9" url="http://www.keil.com/pack/" vendor="Keil" version="1.6.2"/>
         <targetInfos>
           <targetInfo name="debug"/>
           <targetInfo name="nor_sdram"/>
@@ -1628,6 +1641,15 @@
       </component>
     </components>
     <files>
+      <file attr="config" category="header" name="Config\EventRecorderConf.h" version="0.0.0">
+        <instance index="0">RTE\Compiler\EventRecorderConf.h</instance>
+        <component Cbundle="ARM Compiler" Cclass="Compiler" Cgroup="Event Recorder" Cvariant="DAP" Cvendor="Keil" Cversion="1.4.0" condition="Cortex-M Device"/>
+        <package name="ARM_Compiler" schemaVersion="1.4.9" url="http://www.keil.com/pack/" vendor="Keil" version="1.6.2"/>
+        <targetInfos>
+          <targetInfo name="debug"/>
+          <targetInfo name="nor_sdram"/>
+        </targetInfos>
+      </file>
       <file attr="config" category="header" name="MIMXRT1052.h" version="1.0.0">
         <instance index="0">RTE\Device\MIMXRT1052CVL5B\MIMXRT1052.h</instance>
         <component Cclass="Device" Cgroup="Startup" Csub="MIMXRT1052_startup" Cvendor="NXP" Cversion="1.0.0" condition="device.MIMXRT1052_AND_CMSIS_Include_core_cm7"/>
